<?xml version="1.0"?>
<package format="3">
  <name>jsk_common</name>
  <version>2.2.11</version>
  <description>
   <p>Metapackage that contains commonly used toolset for jsk-ros-pkg</p>
  </description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/jsk_common</url>
  <url type="repository">https://github.com/jsk-ros-pkg/jsk_common</url>
  <url type="bugtracker">https://github.com/jsk-ros-pkg/jsk_common/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>dynamic_tf_publisher</exec_depend>
  <exec_depend>image_view2</exec_depend>
  <exec_depend>jsk_topic_tools</exec_depend>
  <exec_depend>jsk_tools</exec_depend>
  <exec_depend>multi_map_server</exec_depend>
  <exec_depend>virtual_force_publisher</exec_depend>
  <exec_depend>jsk_network_tools</exec_depend>
  <exec_depend>jsk_tilt_laser</exec_depend>
  <export>
    <metapackage/>
  </export>
</package>
